# telepathy-nonsense

./: CMakeLists.txt  common.cc  common.hh  connection.cc  connection.hh  debug.cc  debug.hh  filetransferchannel.cc  filetransferchannel.hh  main.cc  muctextchannel.cc  muctextchannel.hh  nonsense.manager  nonsense.service.in  protocol.cc  protocol.hh  qxmpp.manager  qxmpp.service.in  telepathy-nonsense-config.h.in  telepathy-qxmpp-config.h.in  textchannel.cc  textchannel.hh  uniquehandlemap.cc  uniquehandlemap.hh
cmake/modules/: FindQXmpp.cmake
scripts/: tpqt-subproject.sh
